# frug

./: .gitignore  Cargo.toml  LICENSE  Readme.md
examples/: guide.rs  platformer.rs  pong.rs  rectangle.rs  spritesheet.rs  test.rs  text.rs  texture.rs  triangle.rs  vertices.rs
src/: instance.rs  lib.rs  shader.wgsl  shader_color.wgsl  shader_texture.wgsl  sprite.rs  spritesheet.rs  standard_shader.wgsl  texture.rs  vectors.rs
