[package]
name = "frug"
version = "0.1.0"
edition = "2021"
description = "A simple and learnable graphics library for rust"
readme = "Readme.md"
homepage = "https://santyarellano.github.io/frug_book/"
repository = "https://github.com/santyarellano/frug"
license = "MIT"
keywords = ["gamedev", "graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.15"
winit = "0.28"
env_logger = "0.10"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }
image = { version = "0.24", default-features = true, features = ["png", "jpeg"] }
anyhow = "1.0"
cgmath = "0.18"
winit_input_helper = "0.14"
rand = "0.8.5"