[package]
name = "frug"
version = "0.2.6"
edition = "2021"
description = "A simple and learnable gamedev library for rust"
readme = "Readme.md"
homepage = "https://santyarellano.github.io/frug_book/"
repository = "https://github.com/santyarellano/frug"
license = "MIT"
keywords = ["gamedev", "graphics"]


[dependencies]
sdl3 = { version = "0.14.16", features = ["image", "ttf"] }
